# DCS-Mission-Manager

./: .gitignore  CLAUDE.md  README.md  build_exe.bat  dcs_detect.py  debug_mission.lua  flight_profile.py  gui.py  history.py  main.py  mission_events.py  pyproject.toml  units.py
.github/workflows/: ci.yml
custom_aircraft/: F-22A.json  _template.json
src/: __init__.py  callsigns.py  campaign.py  custom_mods.py  difficulty.py  flight_profile.py  naming.py  units.py  validator.py
src/generators/: __init__.py  briefing_generator.py  group_builders.py  kneeboard_generator.py  lua_generator.py  mission_builder.py  miz_packager.py  waypoint_builders.py
src/llm/: __init__.py  mission_parser.py  ollama_client.py
src/maps/: __init__.py  caucasus.py  cold_war_germany.py  mariana_islands.py  persian_gulf.py  syria.py
tests/: test_smoke.py
