[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dcs-mission-manager"
version = "2.0.0"
description = "Generate realistic DCS World .miz mission files from plain-English descriptions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
# No runtime dependencies — stdlib only (Ollama is optional and accessed over HTTP)

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
]

[project.scripts]
dcs-mission-gen = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
